# sandbox-reinforcement-learning

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
notebooks/: sandbox.ipynb
src/sandbox_rl/application/: game_agents.py  game_states.py  learning_agents.py
src/sandbox_rl/core/: constants.py  interfaces.py  models.py
src/sandbox_rl/game_agents/: classic_mcts.py
src/sandbox_rl/game_states/: tictactoe.py
src/sandbox_rl/infrastructure/: services.py
src/template_python/: main.py
tests/application/: test_game_states.py  test_game_states_tictactoe.py  test_learning_agents_mcts.py
